[project]
name = "iyisiniye-scraper"
version = "0.1.0"
description = "iyisiniye veri toplama ve NLP isleme modulu"
requires-python = ">=3.11"
dependencies = [
    "scrapy>=2.11.0",
    "scrapy-playwright>=0.0.42",
    "playwright>=1.49.0",
    "httpx>=0.28.0",
    "requests>=2.32.0",
    "rapidfuzz>=3.10.0",
    "transformers>=4.47.0",
    "torch>=2.5.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "pandas>=2.2.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.10.0",
    "loguru>=0.7.0",
    "tenacity>=9.0.0",
    "itemadapter>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
